--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-session": "^1.15.6",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "multer-cloudinary": "^1.1.0",
     "nodemon": "^1.14.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
