--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "multer-cloudinary": "^1.1.0",
+    "nodemailer": "^4.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg-promise": "^7.3.2"
